webviewsdk-android/2.3.0/接入指南.md
# WebView SDK接入指南

WebView SDK是由腾讯云小微提供的自定义WebView组件，该组件能够为设备和App提供加载云小微定制H5页面的能力。

## 使用场景

WebView SDK目前支持Android 4.0.3版本及以上、能正常展示WebView组件的设备，在智能硬件设备端及搭配的手机App端均有使用场景。

### 带屏智能硬件设备端

针对有屏设备的部分VUI使用场景，目前使用场景有两大类：

#### 技能授权

通过使用SDK拉起指定CP授权URL的页面进行技能登录授权，主要包括以下技能服务：

 * QQ音乐授权
 * FM服务授权（包括阅文、喜马拉雅等）
 * 各类IoT厂商的授权

<!-- TODO: 确认支持的FM服务和IoT -->

#### 离线UI模版

语音交互需要有不同的VUI显示来承载不同的技能，云小微Webview组件通过定制web模板、离线缓存等方案，减少用户实现有屏端UI模板的开发成本，并提高UI加载速度。用户只需要按照文档的描述接入，不需要开发相关UI。接入技能模版ui默认没有特殊的定制需求，能够接受技能模版参考设计上的规则，例如自动退出逻辑。

### 手机App端

手机App端通过接入DMSDK，可以具备设备管理等能力。DMSDK本身依赖WebView SDK，通过WebView SDK，能够加载QQ音乐会员领取、音乐播控、智能家居、云叮当授权等云小微定制Web页面。

## 接入流程

若您已经接入了DMSDK，那么WebViewSDK已经被一并集成，不必做额外的接入工作。

在智能硬件端接入时，编辑Android工程中应用子工程内的`build.gradle`，增加依赖：

```groovy
dependencies {
    implementation 'com.tencent.yunxiaowei.webviewsdk:webviewsdk:2.3.0'
}
```

然后自定义`Application`类，在`onCreate`中初始化环境管理器：

```java
public class App extends Application {
    @Override
    public void onCreate() {
        super.onCreate();
        // 初始化环境管理器
        EnvManager.getInstance().init(this);
    }
}
```

`EnvManager`用于设置WebView SDK中加载的云小微Web页面的后台环境，共有正式环境、测试环境、体验环境三个环境。

接下来，您可以直接在布局中增加TVSWebView组件：

```xml
<com.tencent.ai.tvs.web.TVSWebView
    android:id="@+id/webview"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />
```

然后在Java代码中获取该TVSWebView的TVSWebController：

```java
TVSWebController mController = ((TVSWebView) findViewById(R.id.webview)).getController();
```

操作该TVSWebView的接口均通过其TVSWebController提供。

## 打开云小微H5页面

使用TVSWebController可以加载云小微提供的H5页面。

在打开之前，需要先注入当前设备的信息：

```java
TVSDevice tvsDevice = new TVSDevice();
tvsDevice.productID = "设备的ProductID";
tvsDevice.dsn = "设备的DSN";
mController.setDeviceInfo(tvsDevice);
```

然后使用`loadPresetURLByPath`加载云小微提供的页面，例如要打开远程播控页面：

```java
mController.loadPresetURLByPath("/v2m/musicControl");
```

您也可以使用`loadURL`打开任意页面。

## ProxyData协议

WebView SDK提供了ProxyData协议，云小微的H5页面可以通过该协议发送消息和数据给Native端，您只需要实现相应的接口，就能收到这些数据：

```java
private class DemoBusinessEventListener implements TVSWebController.BusinessEventListener {
    @Override
    public void onReceiveProxyData(JSONObject data) {
        Log.d(TAG, data.toString());
    }
    // Other methods...
}
```

注意将您实现的接口设置到TVSWebController实例中：

```java
mController.setBusinessEventListener(new DemoBusinessEventListener());
```

您会收到形如下面所示含有action和data字段的JSON结构数据：

```json
{
  "action": "some-action",
  "data": {
    "key": "some-value-in-data-payload"
  }
}
```

## 文档资源

要接入技能授权，请参阅[技能授权](https://dingdang.qq.com/doc/page/304)。

要接入离线UI模版，请参阅[离线UI模版](https://dingdang.qq.com/doc/page/305)。

WebView SDK的API参考文档以[Javadoc](https://tencentdingdang.github.io/WebViewSDK/android/latest-redirect.html)形式提供。

WebView SDK的demo可以在[WebViewSDK/demo/OfflineWebDemo at master · TencentDingdang/WebViewSDK](https://github.com/TencentDingdang/WebViewSDK/tree/master/demo/OfflineWebDemo)获取。